<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeating_texture"
    tools:context=".fragments.AboutFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/color_nebula_selected"
            android:layout_marginBottom="@dimen/margin_small">

            <TextView
                android:id="@+id/TextView_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/string_about_title"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:text="@string/string_about_subtitle"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <TextView
            android:id="@+id/TextView_Credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_about_programmer"
            android:textColor="@color/color_nebula_selected"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_about_author"
            android:textColor="@color/color_nebula_selected"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_about_licenses"
            android:textColor="@color/color_nebula_selected"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_tiny"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_about_license"
            android:textColor="@color/color_nebula_selected"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_about_theme_license"
            android:textColor="@color/color_nebula_selected"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_about_icon_license"
            android:textColor="@color/color_nebula_selected"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"/>

        <Button
            android:id="@+id/button_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_about_quit"
            android:background="@drawable/button_purple_small"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_medium"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small" />

    </LinearLayout>
</ScrollView>
