<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/repeating_texture"
    tools:context=".fragment.ChallengeFourFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_challenge_four_title"
            android:textSize="24sp"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@color/color_nebula_selected"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginBottom="15dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/color_nebula_selected"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="@dimen/margin_small"/>

        <TextView
            android:id="@+id/TextView_Challenge_Intro"
            android:text="@string/string_challenge_four_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_nebula_dark"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:textColor="@color/color_nebula"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/string_challenge_four_location"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/margin_small">

                <TextView
                    android:id="@+id/TextView_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/TextView_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <Button
                android:id="@+id/challenge_four_button_check"
                android:text="@string/string_challenge_four_check"
                android:background="@drawable/button_purple_small"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/margin_tiny"
                android:paddingRight="@dimen/margin_tiny"
                android:layout_height="@dimen/margin_medium"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:focusable="true"
                android:enabled="true"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
